--- a/Axon.Common.csproj
+++ b/Axon.Common.csproj
@@ -14,4 +14,9 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Extensions.Logging">
+      <Version>3.1.1</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
