--- a/Axon.Common.csproj
+++ b/Axon.Common.csproj
@@ -15,6 +15,9 @@
     <Folder Include="alchemy\" />
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
+  </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.Logging">
       <Version>3.1.1</Version>
