--- a/Axon.Common.csproj
+++ b/Axon.Common.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-     <!--<TargetFramework>netstandard2.0</TargetFramework>--> 
-    <TargetFrameworks>netstandard2.0;net452;net46</TargetFrameworks> 
+    <TargetFrameworks>netstandard2.1</TargetFrameworks> 
     <SignAssembly>true</SignAssembly> 
     <AssemblyOriginatorKeyFile>Axon.Common.snk</AssemblyOriginatorKeyFile> 
     <DelaySign>false</DelaySign> 
@@ -10,17 +9,22 @@
     <Authors>Joe Lekie</Authors> 
     <Company>Axon</Company> 
     <PackageTags>Axon RPC</PackageTags>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Folder Include="alchemy\" />
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.4.0" />
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.Extensions.Logging">
       <Version>3.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Salar.BinaryBuffers">
+      <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
 </Project>
